redirect Input/Output/Error Streams of game to PreMain parent process